<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_10" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_bg"
        android:padding="@dimen/dim_10"
        android:text="@string/Welcome_to_personalized_digital_assistant" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="*  " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Get_prescription_delivered_to_your_door" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*  " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medication_reminders_never_forget_a_medicine" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*  " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Information_related_to_your_prescription_and_symptoms" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*  " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/All_health_related_contacts" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="@dimen/dim_20"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editText_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bg"
            android:padding="@dimen/dim_10"
            android:hint="@string/Enter_code_to_order_pickup" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bg"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_marginBottom="@dimen/dim_20"
            android:padding="@dimen/dim_10"
            android:text="@string/Submit" />

        <TextView
            android:id="@+id/txtView_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            android:layout_marginBottom="@dimen/dim_20"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/requestBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bg"
            android:padding="@dimen/dim_10"
            android:text="@string/Request_an_invite" />
    </LinearLayout>

</LinearLayout>