<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_medice_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/medicine_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView_medice_prescribtions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/prescription_drug"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="8dp"
         android:textStyle="bold"
        android:layout_below="@+id/textView_medice_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_medice_prescribtions"
        android:layout_centerHorizontal="true" >
    </ListView>

    <Button
        android:id="@+id/btn_request_another_prescription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_35"
        android:layout_below="@+id/editText_add_other_medicine"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/dim_40"
        android:background="@drawable/gray_bg"
        android:paddingLeft="@dimen/dim_15"
        android:paddingRight="@dimen/dim_15"
        android:text="@string/btn_req" />

    <EditText
        android:id="@+id/editText_add_other_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listView_medicine"
        android:layout_margin="20dp"
        android:background="@drawable/white_bg"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/add_another"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>