<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_call_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_bg"
        android:padding="@dimen/dim_10"
        android:text="@string/calling_header" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/textView_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/enroute" />

        <ImageView
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_text1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/calling_tab" />
        <TextView
            android:id="@+id/textView_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call_btn"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/call_to" />
    </RelativeLayout>

</RelativeLayout>