<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_10" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Invite_Request" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_20"
        android:text="@string/Invite_Request_msg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_75"
        android:layout_margin="@dimen/dim_20"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_name" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:gravity="center_vertical"
                android:padding="@dimen/dim_10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_75"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_20"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email_Address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dim_10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_75"
        android:layout_margin="@dimen/dim_20"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bg"
            android:padding="@dimen/dim_10"
            android:text="@string/Send_Request" />
    </LinearLayout>

</LinearLayout>