<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_bg"
        android:padding="@dimen/dim_10"
        android:text="@string/patient_screen_header" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30" >

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30" >

                <TextView
                    android:id="@+id/textView_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/editText_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="textPostalAddress" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30" >

                <TextView
                    android:id="@+id/textView_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/editText_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30"
                android:weightSum="20" >

                <TextView
                    android:id="@+id/textView_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="state" />

                <EditText
                    android:id="@+id/editText_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="3"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="textPersonName" >
                </EditText>

                <TextView
                    android:id="@+id/textView_zipcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center_horizontal"
                    android:text="zipcode" />

                <EditText
                    android:id="@+id/editText_zipcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="5"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="textPhonetic" >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30" >

                <TextView
                    android:id="@+id/textView_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/editText_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:inputType="phone" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30" >

                <TextView
                    android:id="@+id/textView_DOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DOB" />

                <EditText
                    android:id="@+id/editText_DOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/white_bg"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:focusable="false"
                    android:hint="DD/MM/YYYY"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_nxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="next" />

</RelativeLayout>