<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_10" >

    <TextView
        android:id="@+id/header_pickup_prescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_bg"
        android:padding="@dimen/dim_10"
        android:text="@string/Please_enter_prescription_pickup_information" />

    <RelativeLayout
        android:id="@+id/parent_pharmacy_edt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_pickup_prescription"
        android:layout_marginTop="@dimen/dim_30" >

        <TextView
            android:id="@+id/textView_pharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pharmacy" />

        <AutoCompleteTextView
            android:id="@+id/editText_pharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/white_bg"
            android:ems="10"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="next" />

    <RelativeLayout
        android:id="@+id/relativeLayout_pharmacy_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parent_pharmacy_edt_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_description"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_address"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout_pharmacy_description"
        android:background="@drawable/white_bg"
        android:ems="10"
        android:lines="2"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/zipcode"
        android:inputType="textPersonName" >
    </EditText>

</RelativeLayout>